--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   "author": "Alexander Romanenko",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "postcss": "^7.0.32",
+    "purgecss": "^2.2.1",
+    "webpack": "^4.43.0"
   }
 }
