--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Alexander Romanenko",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [
     "constructable-stylesheet",
@@ -16,7 +16,13 @@
   "files": [
     "src"
   ],
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "babel-jest": "^26.0.1",
+    "jest": "^26.0.1",
+    "memfs": "^3.2.0"
+  },
   "dependencies": {
     "postcss": "^7.0.32",
     "purgecss": "^2.2.1",
