--- a/demo/package.json
+++ b/demo/package.json
@@ -9,10 +9,8 @@
     "start": "webpack-dev-server --hot"
   },
   "devDependencies": {
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0",
-    "postcss": "^7.0.32",
-    "purgecss": "^2.2.1",
-    "webpack": "^4.43.0"
+    "webpack-dev-server": "^3.11.0"
   }
 }
