--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@babel/preset-env": "^7.10.2",
     "babel-jest": "^26.0.1",
     "jest": "^26.0.1",
+    "loader-utils": "^2.0.0",
     "memfs": "^3.2.0",
+    "rimraf": "^3.0.2",
     "webpack": "^4.43.0"
   },
   "dependencies": {
