--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "constructable-style-loader",
-  "version": "1.0.0-alpha.4",
+  "version": "1.0.0-alpha.8",
   "description": "Loading only needed selectors of a given CSS library into web component as a constructable stylesheet.",
   "license": "ISC",
   "author": "Alexander Romanenko",
@@ -17,22 +17,20 @@
     "src"
   ],
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
-    "babel-jest": "^26.0.1",
-    "jest": "^26.0.1",
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.5",
+    "@fullhuman/postcss-purgecss": "^4.0.3",
+    "babel-jest": "^27.0.2",
+    "jest": "^27.0.4",
     "loader-utils": "^2.0.0",
-    "memfs": "^3.2.0",
+    "memfs": "^3.2.2",
+    "postcss": "^8.3.4",
+    "postcss-loader": "^6.1.0",
+    "purgecss": "^4.0.3",
     "rimraf": "^3.0.2",
-    "webpack": "^4.43.0"
-  },
-  "optionalDependencies": {
-    "purgecss": "^2.2.1",
-    "postcss-loader": "^3.0.0"
+    "webpack": "^5.39.0"
   },
   "peerDependencies": {
     "webpack": "*"
-  },
-  "dependencies": {
   }
 }
